@@ -735,49 +735,6 @@ WebInspector.ProfilesPanel.prototype = {
         }
     },
 
-    handleShortcut: function(event)
-    {
-        if (Preferences.heapProfilerPresent && !Preferences.detailedHeapProfiles) {
-            var combo = ["U+004C", "U+0045", "U+0041", "U+004B", "U+005A"];  // "LEAKZ"
-            if (this._recognizeKeyboardCombo(combo, event)) {
-                this._displayDetailedHeapProfilesEnabledHint();          
-                this._enableDetailedHeapProfiles(true);
-            }
-        }
-        WebInspector.Panel.prototype.handleShortcut.call(this, event);
-    },
-
-    _recognizeKeyboardCombo: function(combo, event)
-    {
-        var isRecognized = false;
-        if (!this._comboPosition) {
-            if (event.keyIdentifier === combo[0])
-                this._comboPosition = 1;
-        } else if (event.keyIdentifier === combo[this._comboPosition]) {
-            if (++this._comboPosition === combo.length)
-                isRecognized = true;
-        } else
-            delete this._comboPosition;
-        if (this._comboPosition)
-            event.handled = true;
-        return isRecognized;
-    },
-    
-    _displayDetailedHeapProfilesEnabledHint: function()
-    {
-        var message = new WebInspector.HelpScreen("Congratulations!");
-        message.contentElement.addStyleClass("help-table");
-        message.contentElement.textContent = "Detailed Heap snapshots are now enabled.";
-        message.show();
-
-        function hideHint()
-        {
-            message._hide();
-        }
-
-        setTimeout(hideHint, 2000);
-    },
-
     _enableDetailedHeapProfiles: function(resetAgent)
     {
         if (resetAgent)
